fix responsive issues on small devices

--- a/public/assets/_json.scss
+++ b/public/assets/_json.scss
@@ -61,6 +61,7 @@
         text-align: right;
         line-height: 1.8;
         color: $accent-color;
+        font-weight: bold;
       }
 
       .values-container {
@@ -81,7 +82,6 @@
 
           input {
             height: 30px;
-
           }
 
         }
